# ccr

./: .gitignore  CLAUDE.md  CMakeLists.txt  LR.md  smoke_test.py
config/cmake/: Findpybind11.cmake
engine/: CMakeLists.txt
engine/bindings/: CMakeLists.txt  bindings.cpp
engine/include/ccr/: ccr_engine.hpp  correlation_engine.hpp  cva_integrator.hpp  exposure_engine.hpp  jump_diffusion.hpp  normal_variate.hpp  path_simulator.hpp  quantile_extractor.hpp  rng_engine.hpp  simd_abstraction.hpp  time_grid.hpp  types.hpp
engine/src/: ccr_engine.cpp  correlation_engine.cpp  cva_integrator.cpp  exposure_engine.cpp  jump_diffusion.cpp  memory_arena.hpp  normal_variate.cpp  path_simulator.cpp  quantile_extractor.cpp  rng_engine.cpp  simd_abstraction.cpp  time_grid.cpp
scripts/: build_engine.sh  run_dev.sh
server/: main.py
server/api/: routes.py  websocket.py
server/bindings/: engine_client.py
server/core/: engine_runner.py
server/models/: schemas.py
